--- a/5zx.html
+++ b/5zx.html
@@ -26,5 +26,5 @@
 
 <embed src="http://www.youtaker.com/video2015/v2007/swf/m.swf" width="336" height="100" bgcolor="#FFFFFF" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer"  flashvars="file=http://www.youtaker.com/video/v/nu/90f53fd034724fedb19f22b1fcaf7ad585.xml&linkfromdisplay=false&showdigits=true&autostart=true&repeat=true&showfsbutton=false&showeq=true" />
 
-</boby>
+</body>
 </html>
